@@ -117,16 +117,8 @@ my %sqlite_functions = (
 
 sub _croak { require Carp; goto &Carp::croak }
 
+# Legacy method
 sub create_sqlite_sequence {
-    my $dbh = shift;
-
-    local $dbh->{RaiseError} = 1;
-    local $dbh->{PrintError} = 0;
-
-    my $temp = '_temp' . join( '', map { int( rand($_) ) } 1000 .. 1005 );
-    $dbh->do("CREATE TABLE $temp(x integer primary key autoincrement)");
-    $dbh->do("DROP TABLE $temp");
-
     return;
 }
 
@@ -137,19 +129,11 @@ sub _create_sequence {
     local $dbh->{RaiseError} = 1;
     local $dbh->{PrintError} = 0;
 
-    # the sqlite_sequence table doesn't have any constraints so it
-    # would be possible to insert the same sequence twice. Check if
-    # one already exists
-    my ($val) = (
-        $dbh->selectrow_array(
-            'SELECT seq FROM sqlite_sequence WHERE name = ?',
-            undef, $name
-        )
-    );
-    $val && _croak("create_sequence: sequence already exists: $name");
-    $log->debug("INSERT INTO sqlite_sequence VALUES('$name',0)");
-    $dbh->do( 'INSERT INTO sqlite_sequence(name,seq) VALUES(?,?+0)',
-        undef, $name, 0 );
+    $dbh->do( 'CREATE TABLE '
+          . $name
+          . '_sequence (seq INTEGER PRIMARY KEY AUTOINCREMENT);' );
+    $dbh->do( 'INSERT INTO ' . $name . '_sequence(seq) VALUES(0)' );
+    $dbh->do( 'DELETE FROM ' . $name . '_sequence' );
 }
 
 sub _currval {
@@ -159,19 +143,14 @@ sub _currval {
     local $dbh->{RaiseError} = 1;
     local $dbh->{PrintError} = 0;
 
-    my ($val) = (
-        $dbh->selectrow_array(
-            'SELECT seq FROM sqlite_sequence WHERE name = ?',
-            undef, $name
-        )
-    );
+    my $ref = $dbh->selectrow_arrayref(
+        'SELECT seq FROM sqlite_sequence WHERE name = ?',
+        undef, $name . '_sequence' );
 
-    if ( defined $val ) {
-        $log->debug( "currval('$name') -> " . $val );
-        return $val;
-    }
+    _croak("currval: unknown sequence: $name") unless $ref;
 
-    _croak("currval: unknown sequence: $name");
+    $log->debug( "currval('$name') -> " . $ref->[0] );
+    return $ref->[0];
 }
 
 sub _nextval {
@@ -180,31 +159,11 @@ sub _nextval {
 
     local $dbh->{RaiseError} = 1;
     local $dbh->{PrintError} = 0;
-    my $val;
 
-    my $i = 0;
-    while (1) {
-        _croak 'could not obtain nextval' if $i++ > 10;
-
-        my ($current) = (
-            $dbh->selectrow_array(
-                'SELECT seq FROM sqlite_sequence WHERE name = ?', undef,
-                $name
-            )
-        );
-        _croak("nextval: unknown sequence: $name") unless defined $current;
-
-        next
-          unless $dbh->do(
-            'UPDATE sqlite_sequence SET seq = ?+0 '
-              . 'WHERE name = ? AND seq = ?+0',
-            undef, $current + 1, $name, $current
-          );
-
-        $log->debug( "nextval('$name') -> " . ( $current + 1 ) );
-
-        return $current + 1;
-    }
+    $dbh->do( 'INSERT INTO ' . $name . '_sequence(seq) VALUES(NULL)' )
+      or _croak( 'nextval: unknown sequence: ' . $name );
+    $dbh->do( 'DELETE FROM ' . $name . '_sequence' );
+    return $dbh->selectrow_arrayref('SELECT last_insert_rowid();')->[0];
 }
 
 sub create_functions {
